Fix publication buttons cutoff issue
- Removed row margin adjustments that may have interfered with Bootstrap grid
- Added overflow: visible to ol.bibliography, li, and .row to prevent clipping

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -792,15 +792,6 @@ footer.sticky-bottom {
 .publications {
   margin-top: 2rem;
 
-  .row {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .abbr:first-child {
-    padding-left: 0;
-  }
-
   h1 {
     color: var(--global-theme-color);
     font-size: 2rem;
@@ -837,9 +828,15 @@ footer.sticky-bottom {
     list-style: none;
     padding: 0;
     margin-top: 0;
+    overflow: visible;
 
     li {
       margin-bottom: 1rem;
+      overflow: visible;
+
+      .row {
+        overflow: visible;
+      }
 
       .preview {
       }
